--- a/movado_redesign/cartridges/app_custom_movado_redesign/cartridge/client/default/scss/components/_header.scss
+++ b/movado_redesign/cartridges/app_custom_movado_redesign/cartridge/client/default/scss/components/_header.scss
@@ -481,6 +481,7 @@ header.new-header {
 
       img {
         filter: unset;
+        height: rem(40);
       }
     }
 
@@ -618,6 +619,7 @@ header.new-header {
 
           img {
             filter: unset;
+            height: rem(40);
           }
         }
 
@@ -667,6 +669,7 @@ header.new-header {
 
         img {
           filter: unset;
+          height: rem(40);
         }
       }
 
