--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/components/_productTiles.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/components/_productTiles.scss
@@ -71,6 +71,13 @@
             width: auto; 
             max-width: 100%; 
             height: auto;
+
+            @include media-breakpoint-up(lg){
+              & .tile-image {
+                width: rem(390);
+                height: rem(390);
+              }
+            }
         }
       }
   
