--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/product/detail.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/product/detail.scss
@@ -644,6 +644,12 @@
                 max-height: rem(400);
                 }
 
+                @include media-breakpoint-up(lg){
+                    width: rem(284);
+                    height: rem(284);
+                }
+
+
             }
         }
 
@@ -4110,6 +4116,13 @@
                     &:hover {
                         cursor: zoom-in;
                     }
+
+                    @include media-breakpoint-up(lg){
+                        &.zoom-product-modal {
+                            width: rem(453);
+                            height: rem(453);
+                        }
+                    }
                 }
                
 
@@ -4658,6 +4671,13 @@
 
                                 .upsell_image {
                                     margin: rem(0) auto;
+
+                                    @include media-breakpoint-up(lg){
+                                        &.upsell_image{
+                                            width: rem(167);
+                                            height: rem(167);
+                                        }
+                                    }
                                 }
                             }
                         }
