--- a/oliviaburton_redesign/cartridges/app_custom_ob_redesign/cartridge/client/default/scss/product/detailRedesign.scss
+++ b/oliviaburton_redesign/cartridges/app_custom_ob_redesign/cartridge/client/default/scss/product/detailRedesign.scss
@@ -120,6 +120,10 @@
                     &-current{
                         img {
                             display: block !important;
+                            @include media-breakpoint-up(lg){
+                                width: rem(646);
+                                height: rem(646);
+                            }
                         }  
                     }
 
